# nanobook

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DOC.md  LICENSE  PLAN.md  README.md  RELEASING.md  REPRODUCIBILITY.md  SEMVER.md  SPECS.md  UBIQUITOUS_LANGUAGE.md  bug-hunt-findings.md  clippy.toml  codex_status.md  plan.md  plan_failure_modes_deepening.md  plan_v0.10.md  plan_v0.11.md  plan_v0.12.md  plan_v0.13.md  plan_v0.14.md  plan_v0.15.md  plan_v0.16.md  plan_v0.17.md
.beads/: .gitignore  issues.jsonl
.beads/.br_history/: issues.20260512_125951_307772000.jsonl  issues.20260512_130032_450329000.jsonl  issues.20260512_130034_218390000.jsonl  issues.20260512_130035_238775000.jsonl  issues.20260512_130047_195017000.jsonl  issues.20260512_130120_718271000.jsonl  issues.20260512_134653_178386000.jsonl  issues.20260512_134731_812409000.jsonl  issues.20260512_134735_264406000.jsonl  issues.20260512_134743_070881000.jsonl
.github/workflows/: ci.yml  oracle.yml  release.yml  wheels.yml
.unsafe-audit/: AUDIT_SUMMARY.md  unsafe-inventory.jsonl
benches/: README.md  portfolio.rs  stops.rs  throughput.rs  v0.10-comparison.md
broker/: Cargo.toml  README.md
broker/src/: error.rs  lib.rs  mock.rs  parse.rs  types.rs
broker/tests/: binance_account_reconcile.rs  binance_audit_idempotency.rs  binance_f_bin1_idempotency.rs  binance_f_bin2_reconnect_drill.rs  binance_idempotency.rs  binance_mock.rs  binance_order_cache.rs  binance_parsing.rs  binance_reconnect.rs  binance_rest_fallback.rs  binance_websocket.rs  broker_idempotency.rs  f64_cents_checked.rs  failure_injection_modes.rs  failure_injection_smoke.rs  ibkr_f6_reconnect_drill.rs  ibkr_market_order_bounds.rs  ibkr_reconcile.rs  ibkr_reconnect.rs  ibkr_state_query.rs  ibkr_types.rs  mock_binance.rs  mock_tws.rs  validate_mock_vs_paper.rs  zeroize_on_drop.rs
docs/: README.md  api-surface-audit.md  event-log-schema.md  ocaml-oracle-v0.15-summary.md  staying-0x.md
docs/audits/: unsafe-code-audit-2026-05-15.md
docs/operations/: graceful-shutdown.md  kill-switch.md  rebalancer-ops-hardening.md  warm-restart.md  write-ahead-audit-logging.md
docs/ops/: open-beads-completion-audit.md  phase1a-incident-response.md  phase1a-monitoring-requirements.md  phase1a-rollback-plan.md  phase1b-incident-response.md  phase1b-monitoring-requirements.md  phase1b-rollback-plan.md  phase1c-complete-coverage.md  phase1c-incident-response.md  phase1c-monitoring-requirements.md  phase1c-rollback-plan.md  phase2-graceful-shutdown.md  phase2-two-phase-kill.md  v0.15-release-evidence-checklist.md  warm-restart.md
docs/public-api/: nanobook-broker.txt  nanobook-python.txt  nanobook-rebalancer.txt  nanobook-risk.txt  nanobook.txt
docs/solutions/: README.md  itch-replay-learnings.md  ops-hardening-learnings.md  oracle-design.md  paper-soak-learnings.md  portfolio-sim-parity-learnings.md  v0.14-kill-gate-criteria.md  (+2 more)
examples/: demo.rs  demo_quick.rs  ioc_execution.rs  market_making.rs  multi_symbol_lob.rs  portfolio_backtest.rs
fuzz/: Cargo.toml  README.md  mutants-baseline.md
fuzz/fuzz_targets/: fuzz_itch.rs  fuzz_submit.rs
mockups/: index.html  v0.11-itch-replay.html  v0.12-momentum-backtest.html  v0.14-paper-soak.html  v0.15-paper-soak.html
oracle-ocaml/: .gitignore  dune-project  oracle_ocaml.opam
oracle-ocaml/bench/: bench.ml  dune
oracle-ocaml/lib/: book.ml  dune  json.ml  matching.ml  oracle.ml  order.ml  price.ml  replay.ml  side.ml
oracle-ocaml/test/: dune  oracle_ocaml_tests.ml
oracle-ocaml/test/corpus/: README.md
oracle-ocaml/test/corpus/01-simple-cross/: input.jsonl  output.jsonl
oracle-ocaml/test/corpus/02-no-cross/: input.jsonl
oracle-ocaml/test/corpus/03-market-order-sweep/: input.jsonl  output.jsonl
oracle-ocaml/test/corpus/04-fok-no-match/: input.jsonl
oracle-ocaml/test/corpus/05-fok-partial-cross/: input.jsonl
oracle-ocaml/test/corpus/06-ioc-partial-fill/: input.jsonl
oracle-ocaml/test/corpus/07-multiple-same-price/: input.jsonl  output.jsonl
oracle-ocaml/test/corpus/08-cancel-resting/: input.jsonl
oracle-ocaml/test/corpus/09-cancel-partially-filled/: input.jsonl
oracle-ocaml/test/corpus/10-fok-full-fill/: input.jsonl
oracle-ocaml/test/corpus/11-owner-basic/: input.jsonl
oracle-ocaml/test/corpus/12-stp-off/: input.jsonl  output.jsonl
oracle-ocaml/test/corpus/13-stp-cancel-newest/: input.jsonl
oracle-ocaml/test/corpus/14-stp-cancel-oldest/: input.jsonl
oracle-ocaml/test/corpus/15-stp-decrement/: input.jsonl
oracle-ocaml/test/corpus/16-stp-decrement-equal/: input.jsonl
oracle-ocaml/test/corpus/17-min-price/: input.jsonl  output.jsonl
oracle-ocaml/test/corpus/18-max-price/: input.jsonl  output.jsonl
oracle-ocaml/test/golden/: README.md  basic_cross.jsonl  basic_cross_expected.jsonl  fok_no_match.jsonl  partial_fill.jsonl  partial_fill_expected.jsonl
python/: Cargo.toml  nanobook.pyi  pyproject.toml
python/nanobook/: __init__.py
python/src/: backtest_bridge.rs  broker.rs  cv.rs  event.rs  exchange.rs  garch.rs  indicators.rs  itch.rs  lib.rs  metrics.rs  multi.rs  optimize.rs  order.rs  portfolio.rs  position.rs  results.rs  risk.rs  stats.rs  strategy.rs  sweep.rs  types.rs  volatility.rs
python/tests/: profile_sweep.py  test_exchange.py  test_itch.py  test_portfolio.py  test_sweep.py  test_v05_edge_cases.py  test_v05_features.py  test_v09_features.py  test_v09_parity.py
python/tests/property/: test_prop_metrics.py
python/tests/reference/: test_ref_cv.py  test_ref_metrics.py  test_ref_stats.py
rebalancer/: Cargo.toml
risk/: Cargo.toml
risk/src/: checks.rs  (+3 more)
scripts/: README.md  sanitize-audit.py
src/: backtest_bridge.rs  book.rs  cv.rs  error.rs  event.rs  exchange.rs  garch.rs  indicators.rs  itch.rs  level.rs  lib.rs  matching.rs  multi_exchange.rs  optimize.rs  order.rs  persistence.rs  price_levels.rs  side.rs  snapshot.rs  stats.rs  stop.rs  tif.rs  trade.rs  types.rs  volatility.rs
tests/: catastrophic_cancellation.rs  edge_cases.rs  portfolio_invariants.rs  proptest_invariants.rs  reference_parity.rs  safety_tests.rs  stp_policy.rs
(+127 files in other folders)
