[package]
name = "limit-order-book"
version = "0.1.0"
edition = "2021"
description = "Deterministic limit order book and matching engine for testing trading algorithms"
license = "MIT"

[dependencies]
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
