[workspace]
members = [".", "python", "rebalancer", "broker", "risk"]
# `fuzz/` is its own nightly-only workspace (libfuzzer-sys requires
# rustc nightly). Exclude it so stable `cargo build --workspace`
# does not attempt to compile fuzz targets.
exclude = ["fuzz"]
resolver = "2"

[package]
name = "nanobook"
version = "0.9.3"
edition = "2024"
rust-version = "1.85"
description = "Deterministic Rust execution engine for trading backtests: limit-order book, portfolio simulation, metrics, risk checks, and Python bindings"
license = "MIT"
repository = "https://github.com/ricardofrantz/nanobook"
homepage = "https://github.com/ricardofrantz/nanobook"
documentation = "https://docs.rs/nanobook"
readme = "README.md"
keywords = ["orderbook", "trading", "matching-engine", "risk-management", "execution"]
categories = ["simulation", "algorithms"]
authors = ["Ricardo Frantz"]

[dependencies]
thiserror = "2.0"
rustc-hash = "2.1"  # FxHash - fast non-cryptographic hash
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rayon = { version = "1", optional = true }
memmap2 = { version = "0.9", optional = true }

[features]
default = ["event-log"]
event-log = []  # Enable event recording for replay (disable for max perf)
serde = ["dep:serde"]
persistence = ["serde", "event-log", "dep:serde_json"]
portfolio = []
parallel = ["portfolio", "dep:rayon"]
itch = ["persistence", "dep:memmap2"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
serde_json = "1"  # reference-parity golden-fixture tests

[[bin]]
name = "lob"
path = "src/bin/lob.rs"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "portfolio"
harness = false
required-features = ["portfolio"]

[[bench]]
name = "stops"
harness = false

[[test]]
name = "reference_parity"
# Uses portfolio::metrics::compute_metrics. Indicator-only tests would
# work unconditionally, but gating the whole target keeps the Cargo
# configuration simple — enable via --all-features or --features portfolio.
required-features = ["portfolio"]

[[test]]
name = "catastrophic_cancellation"
# Uses portfolio::metrics::{rolling_sharpe, rolling_volatility}. Same
# rationale as reference_parity: gate on portfolio.
required-features = ["portfolio"]
