(lang dune 3.16)
(name oracle)

(generate_opam_files true)

(package
 (name oracle)
 (allow_empty)
 (synopsis "OCaml limit-order-book reference oracle for nanobook")
 (description "Reference LOB implementation for differential testing against the Rust nanobook engine")
 (depends
  (ocaml (>= 4.14))
  (dune (>= 3.16))
  yojson))
