[package]
name = "nanobook-python"
version = "0.9.3"
edition = "2024"
publish = false

[lib]
name = "nanobook"
crate-type = ["cdylib"]

[features]
itch = ["nanobook/itch"]
binance = ["nanobook-broker/binance"]

[dependencies]
nanobook = { path = "..", features = ["event-log", "serde", "persistence", "portfolio", "parallel"] }
nanobook-broker = { path = "../broker", features = ["ibkr"] }
nanobook-risk = { path = "../risk" }
pyo3 = { version = "0.27", features = ["extension-module"] }
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.27"
