[build-system]
requires = ["maturin==1.11.5"]
build-backend = "maturin"

[project]
name = "nanobook"
version = "0.9.3"
requires-python = ">=3.11"
description = "Deterministic limit order book, portfolio simulator, and matching engine"
license = "MIT"
authors = [{ name = "Ricardo Frantz" }]
readme = "README.md"
keywords = ["orderbook", "trading", "matching-engine", "backtesting", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/ricardofrantz/nanobook"
Repository = "https://github.com/ricardofrantz/nanobook"
Documentation = "https://docs.rs/nanobook"
Issues = "https://github.com/ricardofrantz/nanobook/issues"

[dependency-groups]
dev = [
    "hypothesis==6.152.1",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pytest==9.0.3",
]

[tool.maturin]
features = ["pyo3/extension-module", "itch"]
python-source = "."
module-name = "nanobook.nanobook"
include = ["nanobook.pyi"]
